* October 24, 2008, Kristian Van Der Vliet *

Fixed a couple of stupid errors in libpthread where || (Boolean OR) had been
transposed for && (Boolean AND) causing some simple sanity checks to fail.

* October 8, 2008, Kaj de Vos *

Standardised main documentation location, from /atheos/Documentation/ and
/boot/Documentation/ on Desktop and /Documentation/ on Server, to /documentation/.
This also gets rid of the last use of the /atheos/ symlink.
Added a Documentation/ symlink in the desktop templates to /documentation/.

* October 7, 2008, Kristian Van Der Vliet *

Added os::Directory::SetPath(). Patch from
Dee Sharpe <demetrioussharpe@netscape.net>

* September 29, 2008, Kaj de Vos *

Updated the default content for home directories: browser bookmarks, desktop links
and filetype associations.

* September 5, 2008, Kaj de Vos *

The main documentation files are now pulled from the websites, so they are first
processed by the content management system. The FAQ is now also included in
/Documentation/, and the new translated documentation.

Added ReadLine to the build at a tip from Anthony and made BASh use this external
version. The added value is that INetUtils FTP now also uses it.

* August 23, 2008, Kaj de Vos *

Introduced a symlink /resources/ to /usr/. This will serve the migration in the
coming time of resource packages to /resources/, which is a much clearer name and
separates our packages from the legacy content of /usr/ (Unix System Resources).
I chose the most fitting of those three words to describe our packages.

* August 14, 2008, Kaj de Vos *

Added a number of extra GrUB entries to the install CD for hardware testing, known
emulator configurations and serial debugging.

Used Anthony's sysinfo extension in the installer to find out the kernel parameters
that the install CD was booted with and propagate any extra parameters into the
GrUB menu of the installation.

* August 4, 2008, Kaj de Vos *
